# RISC-8

assembler/: Cargo.toml
assembler/python-ver/: 1  disassembler.py  encoder.py  main.py  parser.py  test.s
assembler/src/: encoder.rs  error.rs  lexer.rs  main.rs  parser.rs
emulator/: build.zig  build.zig.zon  test.s
emulator/.zig-cache/o/183eaebb1b81810d2135106d34d5e298/: emulator
emulator/.zig-cache/o/2285f98f00dacf86a0f3c0806a4ba037/: emulator
emulator/.zig-cache/o/2ac0a0c97c5e13b7a03bb246782302f4/: emulator
emulator/.zig-cache/o/4846fbf17e8960ce6c75f6acdabc0c11/: emulator
emulator/.zig-cache/o/5cec2724efdfa5c50c56589fc14a5aaf/: aurorasphere
emulator/.zig-cache/o/7749d9662792ae907d7ee989713e9631/: emulator
emulator/.zig-cache/o/77db1c270fe70f2664060f7ececb1ece/: emulator
emulator/.zig-cache/o/875c35ca2e3eabffa0ee3c05bb802c32/: emulator
emulator/.zig-cache/o/89ff6731de106497938d80639b597e8d/: emulator
emulator/.zig-cache/o/ad83745405d85b5b258eeab83a9c9266/: aurorasphere
emulator/.zig-cache/o/b8bb15147ef6f30e8569ff00020483cd/: emulator
emulator/.zig-cache/o/b9f39c6e1e6a59f775f1e03411b534d2/: emulator
emulator/.zig-cache/o/c14d9a9087e463ba1f36d7e72eb50ed3/: emulator
emulator/.zig-cache/o/c19032f0b98617ecc2220a064ced4a74/: emulator
emulator/.zig-cache/o/c96a8f4bf1ede737f9a3ca4d536c724b/: emulator
emulator/.zig-cache/o/d80d78f32fb2b65bbd68b7cb689f5f1b/: emulator
emulator/src/: cpu.zig  device.zig  elf_constants.zig  main.zig  memory.zig  program.zig  soc.zig
example/src/: helloworld.s
(+3 files in other folders)
