[package]
name = "assembler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap        = { version = "4.3", features = ["derive"] } # CLI 파서
logos       = "0.13"   # 빠르고 쉬운 lexer
bitvec      = "1.0"    # 비트 조작 (선택 사항)
thiserror   = "1.0"    # error enum derive
anyhow      = "1.0"    # 편한 ? 연쇄

